--- a/src/Tests/PerformanceTestsResultUploader/PerformanceTestsResultUploader.csproj
+++ b/src/Tests/PerformanceTestsResultUploader/PerformanceTestsResultUploader.csproj
@@ -2,7 +2,7 @@
 
   <PropertyGroup>
     <OutputType>Exe</OutputType>
-    <TargetFramework>netcoreapp3.0</TargetFramework>
+    <TargetFramework>$(SdkTargetFramework)</TargetFramework>
     <!--Do not use apphost since only dotnet execute has execute permission on Helix machine-->
     <UseAppHost>false</UseAppHost>
   </PropertyGroup>
