--- a/src/Tests/Microsoft.DotNet.TestFramework/Microsoft.DotNet.TestFramework.csproj
+++ b/src/Tests/Microsoft.DotNet.TestFramework/Microsoft.DotNet.TestFramework.csproj
@@ -13,8 +13,7 @@
   </ItemGroup>
 
   <ItemGroup>
-    <PackageReference Include="FluentAssertions" Version="4.18.0" />
+    <PackageReference Include="FluentAssertions" Version="$(FluentAssertionsVersion)" />
   </ItemGroup>
 
-  <Import Project="$(RepoRoot)/build/Test.targets" />
 </Project>
