--- a/src/Tasks/Microsoft.NETFramework.props
+++ b/src/Tasks/Microsoft.NETFramework.props
@@ -43,4 +43,7 @@ Copyright (C) Microsoft Corporation. All rights reserved.
 
    <Import Project="$(NetFrameworkPropsPath)" />
 
+   <!--Import props that are common for both full framework and core-->
+   <Import Project="$(MSBuildToolsPath)\Microsoft.NET.props" />
+
 </Project>
