--- a/src/Tasks/Microsoft.Build.Tasks.csproj
+++ b/src/Tasks/Microsoft.Build.Tasks.csproj
@@ -752,6 +752,9 @@
     <Content Include="Microsoft.Common.tasks">
       <CopyToOutputDirectory>PreserveNewest</CopyToOutputDirectory>
     </Content>
+    <Content Include="Microsoft.NET.props">
+      <CopyToOutputDirectory>PreserveNewest</CopyToOutputDirectory>
+    </Content>
     <Content Include="Microsoft.NETFramework.CurrentVersion.props">
       <CopyToOutputDirectory>PreserveNewest</CopyToOutputDirectory>
     </Content>
@@ -833,6 +836,9 @@
     <DataFile Include="Microsoft.NETFramework.targets" />
     <DataFile Include="Microsoft.NETFramework.CurrentVersion.targets" />
     <DataFile Include="Microsoft.NETFramework.props">
+      <SubType>Designer</SubType>
+    </DataFile>
+    <DataFile Include="Microsoft.NET.props">
       <SubType>Designer</SubType>
     </DataFile>
     <DataFile Include="Microsoft.NETFramework.CurrentVersion.props">
