--- a/.vsts-dotnet.yml
+++ b/.vsts-dotnet.yml
@@ -11,10 +11,11 @@ trigger:
 #   SkipApplyOptimizationData: false
 
 variables:
+  - name: SourceBranch
+    value: $(IbcSourceBranchName)
   - ${{ if startsWith(variables['Build.SourceBranch'], 'refs/heads/exp/') }}:
-    SourceBranch: master
-  - ${{ if not(startsWith(variables['Build.SourceBranch'], 'refs/heads/exp/')) }}:
-    SourceBranch: $(IbcSourceBranchName)
+    - name: SourceBranch
+      value: master
   - name: _DotNetArtifactsCategory
     value: .NETCore
   - name: _DotNetValidationArtifactsCategory
