--- a/eng/build.yml
+++ b/eng/build.yml
@@ -213,6 +213,7 @@ jobs:
         Contents: |	
          log/$(_BuildConfig)/**/*	
          TestResults/$(_BuildConfig)/**/*	
+         SymStore/$(_BuildConfig)/**/*
         TargetFolder: '$(Build.ArtifactStagingDirectory)'	
       continueOnError: true	
       condition: always()	
